--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,6 +1,6 @@
-displayName=Example
-author=Nobody
-support=
-description=An example greeter plugin
-tags=
-plugins=com.example.ExamplePlugin
+displayName=Unranked KC Tracker
+author=Erishion Games LLC
+support=https://github.com/Erishion-Games-LLC/Runelite-Unranked-KC-Tracker-Plugin/issues
+description=An easy way to see KC and other values not tracked on the High scores. For example, KC under 50.
+tags=tracker, kc, tithe farm, points, kill count, clan
+plugins=com.erishiongamesllc.unrankedkctracker.UnrankedKcTrackerPlugin
