--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -3,4 +3,4 @@ author=Erishion Games LLC
 support=https://github.com/Erishion-Games-LLC/Runelite-Unranked-KC-Tracker-Plugin/issues
 description=An easy way to see KC and other values not tracked on the High scores. For example, KC under 50.
 tags=tracker, kc, tithe farm, points, kill count, clan
-plugins=com.erishiongamesllc.unrankedkctracker.UnrankedKcTrackerPlugin
+plugins=com.erishiongames.unrankedkctracker.UnrankedKcTrackerPlugin
